terraform/vpc_nat/modules/security_groups/load_balancer.tf
# Application Load Balancer Security Group
resource "aws_security_group" "alb_security_group" {
  name        = "alb-security-group"
  description = "enable http/https traffic on port 80 and 443"
  vpc_id      = var.vpc_id

  ingress {
    description = "http access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    // TODO: Protect Ingress Traffic
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "https access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "alb-security-group"
  }
}
